<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="EncoderOverflow_RPMConversion" Id="{021157f7-26b8-402f-8f35-6544dd39b2ab}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK EncoderOverflow_RPMConversion

VAR_OUTPUT
	rpm_value: REAL; // RPM-Wert
END_VAR
VAR
	old_encoder_value: DINT := 0;
    rpm: REAL := 0.0;
    overflow: BOOL := FALSE;
	T : REAL := 0.001;
	edge_detected_overflow: BOOl;
	old_counter_overflow: BOOL := False;
	old_counter_underflow: BOOL;
	factor : REAL := 60 / (T*2048);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// detect rising edge of counter overflow. This means Encoder has reached maximum

// 1 rotation is 2048 Encoder Value
IF GVL_Real_Block.counter_overflow AND old_counter_overflow = FALSE THEN
	// Encoder Overflow detected counter_value starts again from zero
	rpm := DINT_TO_REAL((65535 - old_encoder_value) + GVL_Real_Block.counter_value) * factor;

    // rpm := LREAL_TO_REAL(0.0); // Setze RPM auf 0 bei einem Overflow
    // last_encoder_value := GVL_Real_Block.counter_value; // Aktualisiere den letzten Encoderwert
    // GVL_Real_Block.counter_overflow := FALSE; // Reset Overflow-Signal
ELSIF GVL_Real_Block.counter_underflow AND old_counter_underflow = FALSE THEN
	// Encoder Underflow detected counter_value new value ~65000
	rpm := DINT_TO_REAL(old_encoder_value + (65535 - GVL_Real_Block.counter_value)) * factor;

    //rpm := (UINT_TO_REAL(GVL_Real_Block.counter_value) - last_encoder_value)/T / 2048 * 60; // Umrechnung in RPM
    //last_encoder_value := GVL_Real_Block.counter_value; // Aktualisiere den letzten Encoderwert
ELSE
	// Normal without over/underflow
	rpm := DINT_TO_REAL(UINT_TO_DINT(GVL_Real_Block.counter_value) - old_encoder_value) * factor;
END_IF

old_counter_underflow := GVL_REAL_BLOCK.counter_underflow;
old_counter_overflow := GVL_Real_Block.counter_overflow;
old_encoder_value := GVL_Real_Block.counter_value;
rpm_value := rpm; // Aktualisiere den RPM-Wert]]></ST>
    </Implementation>
    <LineIds Name="EncoderOverflow_RPMConversion">
      <LineId Id="15" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="139" Count="0" />
      <LineId Id="117" Count="3" />
      <LineId Id="130" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="148" Count="1" />
      <LineId Id="123" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="150" Count="0" />
      <LineId Id="32" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>